<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.andrea.udaciquiz.QuizActivity"
    android:background="@drawable/gradient">
    <LinearLayout
        style="@style/quiz_page"
        android:orientation="vertical">
        <TextView
            android:id="@+id/name_box"
            style="@style/name_box_style"
            android:text="@string/user_name"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/question_1"
                style="@style/question"
                android:text="@string/question_1"/>

            <RadioGroup
                style="@style/group">

                <RadioButton
                    android:id="@+id/answer_1_1"
                    style="@style/radio_check"
                    android:text="@string/answer_1_1"/>
                <RadioButton
                    android:id="@+id/answer_1_2"
                    style="@style/radio_check"
                    android:text="@string/answer_1_2"/>
                <RadioButton
                    android:id="@+id/answer_1_3"
                    style="@style/radio_check"
                    android:text="@string/answer_1_3"/>
                <RadioButton
                    android:id="@+id/answer_1_4"
                    style="@style/radio_check"
                    android:text="@string/answer_1_4"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/question_2"
                style="@style/question"
                android:text="@string/question_2"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:padding="16dp">

                <RadioButton
                    style="@style/radio_check"
                    android:text="@string/answer_2_1"/>
                <RadioButton
                    android:id="@+id/answer_2"
                    style="@style/radio_check"
                    android:text="@string/answer_2_2"/>
            </RadioGroup>

            <EditText
                android:id="@+id/edit_quiz"
                style="@style/edit_quiz"
                android:hint="answer"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/question_3"
                style="@style/question"
                android:text="@string/question_3"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <RadioButton
                    android:id="@+id/answer_3_1"
                    style="@style/radio_check"
                    android:text="@string/answer_3_1"/>
                <RadioButton
                    android:id="@+id/answer_3_2"
                    style="@style/radio_check"
                    android:text="@string/answer_3_2"/>
                <RadioButton
                    android:id="@+id/answer_3_3"
                    style="@style/radio_check"
                    android:text="@string/answer_3_3"/>
                <RadioButton
                    android:id="@+id/answer_3_4"
                    style="@style/radio_check"
                    android:text="@string/answer_3_4"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                style="@style/question"
                android:text="@string/question_4"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="16dp">
                <CheckBox
                    style="@style/radio_check"
                    android:text="@string/answer_4_1"/>
                <CheckBox
                    android:id="@+id/answer_4_2"
                    style="@style/radio_check"
                    android:text="@string/answer_4_2"/>
                <CheckBox
                    android:id="@+id/answer_4_3"
                    style="@style/radio_check"
                    android:text="@string/answer_4_3"/>
                <CheckBox
                    style="@style/radio_check"
                    android:text="@string/answer_4_4"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/question"
                style="@style/question"
                android:text="@string/question_5"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <RadioButton
                    android:id="@+id/answer_5_1"
                    style="@style/radio_check"
                    android:text="@string/answer_5_1"/>
                <RadioButton
                    android:id="@+id/answer_5_2"
                    style="@style/radio_check"
                    android:text="@string/answer_5_2"/>
                <RadioButton
                    android:id="@+id/answer_5_3"
                    style="@style/radio_check"
                    android:text="@string/answer_5_3"/>
                <RadioButton
                    android:id="@+id/answer_5_4"
                    style="@style/radio_check"
                    android:text="@string/answer_5_4"/>
            </RadioGroup>
        </LinearLayout>
        <Button
            android:id="@+id/next"
            style="@style/button_move"
            android:theme="@style/button_move"
            android:text="@string/next"/>
    </LinearLayout>

</ScrollView>
